--- a/extensions.conf
+++ b/extensions.conf
@@ -1,4 +1,5 @@
 [from-internal]
+; 播打給客房通知行李抵達, Asterisk分機100
 exten = 100,1,Answer()
  same = n,Wait(1)
  same = n,Set(soundpath=/home/advrobot/robocall/sounds)
@@ -46,7 +47,7 @@ exten = 100,1,Answer()
 ;
  same = n,Hangup()
 ; 
-; 用戶按了0
+; 用戶按了0, Asterisk分機0
 exten = 0,1,NoOp()
  same = n,Set(soundpath=/home/advrobot/robocall/sounds)
  same = n,Set(soundpath_en=/home/advrobot/robocall/sounds_en)
@@ -79,4 +80,94 @@ exten = 0,1,NoOp()
  same = n,WaitExten(3)
 ;
  same = n,Hangup()
+
+
+; 請求移車 (remove_car_req) Asterisk分機200
+exten = 200,1,Answer()
+ same = n,Wait(3)
+ same = n,Set(soundpath=/home/advrobot/robocall/sounds)
+ same = n,Set(soundpath_en=/home/advrobot/robocall/sounds_en)
+;
+ same = n,WaitExten(1)
+; 機器人來電, 請按1
+ same = n,Background(${soundpath}/1)
+;
+ same = n,WaitExten(1)
+; 機器人來電, 請按1
+ same = n,Background(${soundpath}/1)
+;
+ same = n,WaitExten(1)
+; 機器人來電, 請按1
+ same = n,Background(${soundpath}/1)
+;
+ same = n,WaitExten(1)
+; 機器人來電, 請按1
+ same = n,Background(${soundpath}/1)
+;
+ same = n,WaitExten(1)
+; 機器人來電, 請按1
+ same = n,Background(${soundpath}/1)
+;
+ same = n,WaitExten(1)
+; 機器人來電, 請按1
+ same = n,Background(${soundpath}/1)
+;
+ same = n,WaitExten(1)
+; 機器人來電, 請按1
+ same = n,Background(${soundpath}/1)
+;
+ same = n,WaitExten(1)
+; 機器人來電, 請按1
+ same = n,Background(${soundpath}/1)
+;
+ same = n,WaitExten(1)
+; 機器人來電, 請按1
+ same = n,Background(${soundpath}/1)
+;
+ same = n,WaitExten(1)
+; 機器人來電, 請按1
+ same = n,Background(${soundpath}/1)
+; 前台沒人接... 掛掉 上層重撥
+ same = n,Hangup()
+
+
+
+; 前台按了1, Asterisk分機1
+exten = 1,1,NoOp()
+ same = n,Set(soundpath=/home/advrobot/robocall/sounds)
+ same = n,Set(soundpath_en=/home/advrobot/robocall/sounds_en)
+ same = n,NoOp(KKUEI ext1)
+; 前台分機號
+ same = n,Set(d1=${ext:0:1})
+ same = n,Set(d2=${ext:1:1})
+ same = n,Set(d3=${ext:2:1})
+ same = n,Set(d4=${ext:3:1})
+ same = n,Playback(${soundpath}/${d1})
+ same = n,Playback(${soundpath}/${d2})
+ same = n,Playback(${soundpath}/${d3})
+ same = n,Playback(${soundpath}/${d4})
+ same = n,Wait(1)
+; 目前所在房號
+ same = n,Set(d1=${currentRoomId:0:1})
+ same = n,Set(d2=${currentRoomId:1:1})
+ same = n,Set(d3=${currentRoomId:2:1})
+ same = n,Set(d4=${currentRoomId:3:1})
+ same = n,Playback(${soundpath}/${d1})
+ same = n,Playback(${soundpath}/${d2})
+ same = n,Playback(${soundpath}/${d3})
+ same = n,Playback(${soundpath}/${d4})
+ same = n,Wait(1)
+; 目的房號
+ same = n,Set(d1=${targetRoomId:0:1})
+ same = n,Set(d2=${targetRoomId:1:1})
+ same = n,Set(d3=${targetRoomId:2:1})
+ same = n,Set(d4=${targetRoomId:3:1})
+ same = n,Playback(${soundpath}/${d1})
+ same = n,Playback(${soundpath}/${d2})
+ same = n,Playback(${soundpath}/${d3})
+ same = n,Playback(${soundpath}/${d4})
+ same = n,Wait(1)
+;
+ same = n,Hangup()
+
 
