add sound files and modify extensions.conf for remove_car

--- a/extensions.conf
+++ b/extensions.conf
@@ -84,90 +84,105 @@ exten = 0,1,NoOp()
 
 ; 請求移車 (remove_car_req) Asterisk分機200
 exten = 200,1,Answer()
- same = n,Wait(3)
+; same = n,Wait(3)
  same = n,Set(soundpath=/home/advrobot/robocall/sounds)
  same = n,Set(soundpath_en=/home/advrobot/robocall/sounds_en)
 ;
  same = n,WaitExten(1)
-; 機器人來電, 請按1
+; 機器人無法前進, 請按1
+ same = n,Background(${soundpath}/robot_failed_to_move_plz_press)
  same = n,Background(${soundpath}/1)
 ;
  same = n,WaitExten(1)
-; 機器人來電, 請按1
+; 機器人無法前進, 請按1
+ same = n,Background(${soundpath}/robot_failed_to_move_plz_press)
  same = n,Background(${soundpath}/1)
 ;
  same = n,WaitExten(1)
-; 機器人來電, 請按1
+; 機器人無法前進, 請按1
+ same = n,Background(${soundpath}/robot_failed_to_move_plz_press)
  same = n,Background(${soundpath}/1)
 ;
  same = n,WaitExten(1)
-; 機器人來電, 請按1
+; 機器人無法前進, 請按1
+ same = n,Background(${soundpath}/robot_failed_to_move_plz_press)
  same = n,Background(${soundpath}/1)
 ;
  same = n,WaitExten(1)
-; 機器人來電, 請按1
+; 機器人無法前進, 請按1
+ same = n,Background(${soundpath}/robot_failed_to_move_plz_press)
  same = n,Background(${soundpath}/1)
 ;
  same = n,WaitExten(1)
-; 機器人來電, 請按1
+; 機器人無法前進, 請按1
+ same = n,Background(${soundpath}/robot_failed_to_move_plz_press)
  same = n,Background(${soundpath}/1)
 ;
  same = n,WaitExten(1)
-; 機器人來電, 請按1
+; 機器人無法前進, 請按1
+ same = n,Background(${soundpath}/robot_failed_to_move_plz_press)
  same = n,Background(${soundpath}/1)
 ;
  same = n,WaitExten(1)
-; 機器人來電, 請按1
+; 機器人無法前進, 請按1
+ same = n,Background(${soundpath}/robot_failed_to_move_plz_press)
  same = n,Background(${soundpath}/1)
 ;
  same = n,WaitExten(1)
-; 機器人來電, 請按1
+; 機器人無法前進, 請按1
+ same = n,Background(${soundpath}/robot_failed_to_move_plz_press)
  same = n,Background(${soundpath}/1)
 ;
  same = n,WaitExten(1)
-; 機器人來電, 請按1
+; 機器人無法前進, 請按1
+ same = n,Background(${soundpath}/robot_failed_to_move_plz_press)
  same = n,Background(${soundpath}/1)
-; 前台沒人接... 掛掉 上層重撥
+;
+; // 前台沒人接... 掛掉 上層重撥
  same = n,Hangup()
 
 
 
-; 前台按了1, Asterisk分機1
+; // 前台按了1, Asterisk分機1
 exten = 1,1,NoOp()
  same = n,Set(soundpath=/home/advrobot/robocall/sounds)
  same = n,Set(soundpath_en=/home/advrobot/robocall/sounds_en)
  same = n,NoOp(KKUEI ext1)
-; 前台分機號
- same = n,Set(d1=${ext:0:1})
- same = n,Set(d2=${ext:1:1})
- same = n,Set(d3=${ext:2:1})
- same = n,Set(d4=${ext:3:1})
- same = n,Playback(${soundpath}/${d1})
- same = n,Playback(${soundpath}/${d2})
- same = n,Playback(${soundpath}/${d3})
- same = n,Playback(${soundpath}/${d4})
- same = n,Wait(1)
-; 目前所在房號
+; same = n,Wait(1)
+; // 設定樓層, 目前房號 目的地YYYY號房
  same = n,Set(d1=${currentRoomId:0:1})
  same = n,Set(d2=${currentRoomId:1:1})
  same = n,Set(d3=${currentRoomId:2:1})
  same = n,Set(d4=${currentRoomId:3:1})
- same = n,Playback(${soundpath}/${d1})
+ same = n,Set(floor=${currentRoomId:1:1})
+; 機器人在X樓 
+ same = n,Playback(${soundpath}/robot_is_at)
+ same = n,Playback(${soundpath}/${floor})
+ same = n,Playback(${soundpath}/floor)
+; XXXX號房
+; same = n,Playback(${soundpath}/${d1})
  same = n,Playback(${soundpath}/${d2})
  same = n,Playback(${soundpath}/${d3})
  same = n,Playback(${soundpath}/${d4})
- same = n,Wait(1)
-; 目的房號
+; same = n,Playback(${soundpath}/roomId)
+; same = n,Wait(1)
+; // 設定目的房號
  same = n,Set(d1=${targetRoomId:0:1})
  same = n,Set(d2=${targetRoomId:1:1})
  same = n,Set(d3=${targetRoomId:2:1})
  same = n,Set(d4=${targetRoomId:3:1})
- same = n,Playback(${soundpath}/${d1})
+; 目的地YYYY房號
+ same = n,Playback(${soundpath}/target)
+; same = n,Playback(${soundpath}/${d1})
  same = n,Playback(${soundpath}/${d2})
  same = n,Playback(${soundpath}/${d3})
  same = n,Playback(${soundpath}/${d4})
- same = n,Wait(1)
+; same = n,Playback(${soundpath}/roomId)
+; same = n,Wait(1)
 ;
+; 請通知客房阿姨移動工作車，謝謝
+ same = n,Playback(${soundpath}/plz_notice_to_remove_car)
+ same = n,Wait(3)
  same = n,Hangup()
 
 
